--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "node-sass": "^3.13.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.0",
+    "cssnano": "^3.10.0",
     "grunt": "^1.0.1",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.9.0",
     "grunt-rollup": "^1.0.1",
     "object-fit-images": "^3.2.3",
     "rollup-plugin-babel": "^2.7.1",
