--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
+    "babel-cli": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "cssnano": "^3.10.0",
     "grunt": "^1.0.1",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.9.0",
-    "grunt-rollup": "^1.0.1",
+    "grunt-rollup": "^6.0.0",
     "object-fit-images": "^3.2.3",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-node-resolve": "^3.0.0"
