--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "grunt-cli": "^1.2.0",
-    "node-sass": "^3.13.0"
+    "node-sass": "^3.13.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
